<resources>
    <string name="app_name">MyLabAppAdamhh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="signin_email_fragment">Email</string>
    <string name="signin_password_fragment">Password</string>
    <string name="signin_signin_fragment">Sign In</string>
    <string name="register_fname_fragment">First Name</string>
    <string name="register_lname_fragment">Last Name</string>
    <string name="register_email_fragment">Email</string>
    <string name="register_password_fragment">Password</string>
    <string name="register_retype_fragment">Retype Password</string>
    <string name="register_register_fragment">Register</string>
    <string name="title_home">Home</string>
    <string name="title_blogs">Blogs</string>
    <string name="title_register">Register</string>
    <string name="title_success">Success</string>
    <string name="action_link">Full Post</string>
    <string name="action_next">Next</string>
    <string name="text_blank">Blank</string>
    <string name="title_main">Main Activity</string>

</resources>